--- a/02-apollo-config-server/src/main/resources/application.yml
+++ b/02-apollo-config-server/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: apollo-config-server
-  profiles:
-    active:
-      - native
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/lucasgdamascena/microservice-config
+          search-paths: 'greeting-service*'
+        default-label: main
